--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Flask==2.3.3
 python-dotenv==1.0.0
 Flask-SQLAlchemy==3.0.5
-Flask-Bcrypt==1.1.1
+Flask-Bcrypt==1.0.1
 requests==2.31.0
+gunicorn==21.2.0
